[gd_scene load_steps=10 format=2]

[ext_resource path="res://styleboxes/modalpopupsub.tres" type="StyleBox" id=1]
[ext_resource path="res://styleboxes/modalpopup.tres" type="StyleBox" id=2]
[ext_resource path="res://scripts/DeckIntentions/deckcorepopup.gd" type="Script" id=3]
[ext_resource path="res://app icons/Camera.png" type="Texture" id=4]
[ext_resource path="res://shaders/circlemask.tres" type="Material" id=5]
[ext_resource path="res://app icons/BackArrow.png" type="Texture" id=6]
[ext_resource path="res://app icons/Swap.png" type="Texture" id=7]
[ext_resource path="res://app icons/Cancel.png" type="Texture" id=8]

[sub_resource type="CameraTexture" id=1]

[node name="DeckCorePopup" type="Control"]
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CameraFeed" type="TextureRect" parent="."]
margin_right = 1080.0
margin_bottom = 1920.0
rect_min_size = Vector2( 1080, 1920 )
texture = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LensCover" type="Panel" parent="."]
margin_right = 980.0
margin_bottom = 1820.0
rect_min_size = Vector2( 980, 1820 )
custom_styles/panel = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoreMenu" type="CenterContainer" parent="."]
margin_left = 65.0
margin_top = 300.0
margin_right = 915.0
margin_bottom = 900.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuBackground" type="Panel" parent="CoreMenu"]
margin_right = 850.0
margin_bottom = 600.0
rect_min_size = Vector2( 850, 600 )
custom_styles/panel = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="CoreMenu"]
margin_left = 200.0
margin_top = 75.0
margin_right = 650.0
margin_bottom = 525.0
custom_constants/separation = 150

[node name="CenterContainer" type="CenterContainer" parent="CoreMenu/VBoxContainer"]
margin_right = 450.0
margin_bottom = 150.0

[node name="generatenewseed" type="TextureButton" parent="CoreMenu/VBoxContainer/CenterContainer"]
material = ExtResource( 5 )
margin_left = 150.0
margin_right = 300.0
margin_bottom = 150.0
rect_min_size = Vector2( 150, 150 )
texture_normal = ExtResource( 4 )
expand = true
stretch_mode = 4

[node name="ButtonsRack" type="HBoxContainer" parent="CoreMenu/VBoxContainer"]
margin_top = 300.0
margin_right = 450.0
margin_bottom = 450.0
custom_constants/separation = 150

[node name="previousseed" type="TextureButton" parent="CoreMenu/VBoxContainer/ButtonsRack"]
margin_right = 150.0
margin_bottom = 150.0
rect_min_size = Vector2( 150, 150 )
texture_normal = ExtResource( 6 )
expand = true

[node name="startoverdeckorder" type="TextureButton" parent="CoreMenu/VBoxContainer/ButtonsRack"]
margin_left = 300.0
margin_right = 450.0
margin_bottom = 150.0
rect_min_size = Vector2( 150, 150 )
texture_normal = ExtResource( 7 )
expand = true

[node name="Tween" type="Tween" parent="."]

[node name="exit_modal" type="TextureButton" parent="."]
margin_left = 440.0
margin_top = 1400.0
margin_right = 640.0
margin_bottom = 1600.0
rect_min_size = Vector2( 200, 200 )
texture_normal = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_up" from="CoreMenu/VBoxContainer/CenterContainer/generatenewseed" to="." method="_on_generatenewseed_button_up"]
[connection signal="button_up" from="CoreMenu/VBoxContainer/ButtonsRack/previousseed" to="." method="_on_previousseed_button_up"]
[connection signal="button_up" from="CoreMenu/VBoxContainer/ButtonsRack/startoverdeckorder" to="." method="_on_startoverdeckorder_button_up"]
[connection signal="button_up" from="exit_modal" to="." method="_on_exit_modal_button_up"]
